--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="preload" rel="stylesheet" href="index.css">
+  <link rel="preload" as="image" href="crosswalk.jpg">
+  <link rel="preload" as="image" href="flowers.jpg">
+  <link rel="preload" as="image" href="nana.jpg">
+  <link rel="preload" as="image" href="flyhigher.jpg">
+  <link rel="preload" as="image" href="goodmorning.jpg">
+  <link rel="preload" as="image" href="shibuyacrossing.png">
   <title>Sean Coleman</title>
 </head>
 
