--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preload" rel="stylesheet" href="index.css">
+  <link rel="preload" as="style" href="index.css">
   <link rel="preload" as="image" href="crosswalk.jpg">
   <link rel="preload" as="image" href="flowers.jpg">
   <link rel="preload" as="image" href="nana.jpg">
