--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preload" as="image" href="flyhigher.jpg">
   <link rel="preload" as="image" href="goodmorning.jpg">
   <link rel="preload" as="image" href="shibuyacrossing.png">
+
+  <link rel="stylesheet" href="index.css">
   <title>Sean Coleman</title>
 </head>
 
@@ -31,9 +33,9 @@
     </div>
   </div> -->
   <div class="middle-section">
-    <img src="crosswalk.jpg" alt="Crosswalk" id="crosswalk">
-    <img src="flowers.jpg" alt="Flowers" id="flowers">
-    <img src=nana.jpg alt="Azasudai" id="azabudai">
+    <img src="crosswalk.jpg" alt="Crosswalk" id="crosswalk" width="600px">
+    <img src="flowers.jpg" alt="Flowers" id="flowers" width="200px">
+    <img src=nana.jpg alt="Nana" id="nana" width="150px">
     <div class="azabudai-section">
       <p>
         そして私はいつか
@@ -58,7 +60,7 @@
 
   <div class="row-section">
     <div class="image" id="shibuya">
-      <img src="flyhigher.jpg" alt="Shibuya Crossing">
+      <img src="flyhigher.jpg" alt="Shibuya Crossing" width="200px">
       <p class="image-tag">SEAN COLEMAN APRIL 2024</p>
     </div>
     <p>
