--- a/index.html
+++ b/index.html
@@ -20,22 +20,19 @@
     <ul>
       <li><a href="#projects">PROJECTS</a></li>
       <li><a href="#contacts">MUSIC</a></li>
-      <li><a href="#posts">POSTS</a></li>
+      <li><a href="./posts.html">POSTS</a></li>
     </ul>
   </nav>
 </header>
 
 <body>
-  <!-- <div class="top-section">
-    <div>
-      <h3>Sean Coleman</h3>
-      <p>Software Engineer</p>
-    </div>
-  </div> -->
   <div class="middle-section">
-    <img src="crosswalk.jpg" alt="Crosswalk" id="crosswalk" width="600px">
-    <img src="flowers.jpg" alt="Flowers" id="flowers" width="200px">
-    <img src=nana.jpg alt="Nana" id="nana" width="150px">
+    <img src="crosswalk.jpg" title="I'm not even sure which crosswalk this is. Probably not the Shibuya one."
+      alt="Crosswalk" id="crosswalk" width="600px">
+    <img src="flowers.jpg" title="These are flowers photographed by a man shitting his pants. Context is TMI"
+      alt="Flowers" id="flowers" width="200px">
+    <img src=nana.jpg alt="Nana" title="The coolest person alive, probably. Can Masaki fight?" id="nana" width="150px">
+    <img src="driedflower.jpg" alt="Dried Flower" id="driedflower" width="100px">
     <div class="azabudai-section">
       <p>
         そして私はいつか
@@ -53,7 +50,6 @@
         幸せについて語りさえしたのだ
         <br />
         <br />
-        SHUNTARO TANIKAWA
       </p>
     </div>
   </div>
@@ -64,38 +60,63 @@
       <p class="image-tag">SEAN COLEMAN APRIL 2024</p>
     </div>
     <p>
-      LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT. BLANDITIIS PRAESENTIUM, VOLUPTATES LAUDANTIUM DELECTUS
-      MINIMA ODIT SOLUTA CORPORIS EVENIET DOLORES EST! SAEPE DOLORES IPSA QUIS INCIDUNT, DUCIMUS ACCUSANTIUM CORPORIS
-      OFFICIA MODI?
-      <br />
-      <br />
-      LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT. BLANDITIIS PRAESENTIUM, VOLUPTATES LAUDANTIUM DELECTUS
-      MINIMA ODIT SOLUTA CORPORIS EVENIET DOLORES EST! SAEPE DOLORES IPSA QUIS INCIDUNT, DUCIMUS ACCUSANTIUM CORPORIS
-      OFFICIA MODI?
+      <i>
+        On his best walks, he was able to feel that he was nowhere. And this, finally, was all he ever asked of things:
+        to
+        be nowhere. New York was the nowhere he had built around himself, and he realized that he had no intention of
+        ever
+        leaving it again.
+      </i>
     </p>
   </div>
 
   <div class="row-section">
     <p>
-      LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT. BLANDITIIS PRAESENTIUM, VOLUPTATES LAUDANTIUM DELECTUS
-      MINIMA ODIT SOLUTA CORPORIS EVENIET DOLORES EST! SAEPE DOLORES IPSA QUIS INCIDUNT, DUCIMUS ACCUSANTIUM CORPORIS
-      OFFICIA MODI?
+      <i>
+        I am halfway gone into the aether. I try to say something.
+        <br />
+        <br />
+        but no sound leaves me.
+        <br />
+        <br />
+        The light continues to grow until it’s all I see, the theatre is gone,
+        <br />
+        <br />
+        and my body has finally slipped away.
+      </i>
     </p>
     <div class="image" id="shibuya">
-      <img src="goodmorning.jpg" alt="April 2024" width="200px">
+      <img src="goodmorning.jpg" alt="April 2024" width="200px"
+        title="The T2/FLAIR mismatch sign describes an MRI appearance whereby a solid tumor with a very high T2 signal demonstrates prominent albeit incomplete attenuation of this signal on FLAIR.
+
+In adults, it is considered a highly specific radiogenomic signature for astrocytomas IDH-mutant, as opposed to other diffuse gliomas such as oligodendroglioma 4,5. Indeed, a 2021 meta-analysis showed a pooled specificity of 100% for identifying tumors with IDH-mutant, 1p19q non-codeleted status, though pooled sensitivity was 42% ">
       <p class="image-tag">FARUK AKGUN APRIL 2024</p>
     </div>
   </div>
 
   <div class="row-section">
     <div class="image" id="shibuya">
-      <img src="shibuyacrossing.png" alt="Shibuya Crossing" width="200px">
+      <img src="shibuyacrossing.jpg" alt="Shibuya Crossing" width="200px">
       <p class="image-tag">LISA MICHELLE BURNS</p>
     </div>
-    <p>
-      LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT. BLANDITIIS PRAESENTIUM, VOLUPTATES LAUDANTIUM DELECTUS
-      MINIMA ODIT SOLUTA CORPORIS EVENIET DOLORES EST! SAEPE DOLORES IPSA QUIS INCIDUNT, DUCIMUS ACCUSANTIUM CORPORIS
-      OFFICIA MODI?
+    <p class="screenplay">
+      EXT. SHIBUYA STATION - DAY
+      <br />
+      <br />
+      Charlotte gets out at shibuya station, a crowded neighborhood
+      filled with neon, ads, and people.
+      <br />
+      <br />
+      She looks up at the huge intersection as tons of JAPANESE
+      PEOPLE wait to cross the street, no one steps forward until
+      the cross-walk light changes, and all of them cross.
+      <br />
+      <br />
+      A TV screen covering a building plays commercials.
+      <br />
+      <br />
+      She roams around the narrow streets, crowded with stylish
+      JAPANESE KIDS, tan SCHOOLGIRLS pass her.
     </p>
   </div>
 
