--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
   <title>Sean Coleman</title>
 </head>
 
-
 <header>
   <nav>
     <ul>
       <li><a href="#projects">PROJECTS</a></li>
       <li><a href="#contacts">MUSIC</a></li>
-      <li><a href="./posts.html">POSTS</a></li>
+      <li><a href="posts/index .html">POSTS</a></li>
     </ul>
   </nav>
 </header>
@@ -56,7 +55,7 @@
 
   <div class="row-section">
     <div class="image" id="shibuya">
-      <img src="flyhigher.jpg" alt="Shibuya Crossing" width="200px">
+      <img src="minatomirai.jpg" alt="flyhigher" width="200px">
       <p class="image-tag">SEAN COLEMAN APRIL 2024</p>
     </div>
     <p>
