--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
   <div class="row-section">
     <div class="image" id="shibuya">
-      <img src="images/minatomirai.jpg" alt="flyhigher" width="200px">
-      <p class="image-tag">SEAN COLEMAN APRIL 2024</p>
+      <img src="images/nyc.jpg" alt="flyhigher" width="200px">
+      <p class="image-tag">SEAN COLEMAN JANUARY 2026</p>
     </div>
     <p>
       <i>
@@ -97,7 +97,7 @@ In adults, it is considered a highly specific radiogenomic signature for astrocy
   <div class="row-section">
     <div class="image" id="shibuya">
       <img src="images/shibuyacrossing.jpg" alt="Shibuya Crossing" width="200px">
-      <p class="image-tag">LISA MICHELLE BURNS</p>
+      <p class="image-tag">LISA MICHELLE BURNS (?)</p>
     </div>
     <p class="screenplay">
       EXT. SHIBUYA STATION - DAY
