--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preload" as="style" href="index.css">
-  <link rel="preload" as="image" href="images/crosswalk.jpg">
-  <link rel="preload" as="image" href="images/flowers.jpg">
-  <link rel="preload" as="image" href="images/flyhigher.jpg">
-  <link rel="preload" as="image" href="images/goodmorning.jpg">
-  <link rel="preload" as="image" href="images/shibuyacrossing.png">
-  <link rel="preload" as="image" href="images/nana.jpg">
-  <link rel="stylesheet" href="index.css">
+  <link rel="preload" as="style" href="/index.css">
+  <link rel="preload" as="image" href="/images/crosswalk.jpg">
+  <link rel="preload" as="image" href="/images/flowers.jpg">
+  <link rel="preload" as="image" href="/images/flyhigher.jpg">
+  <link rel="preload" as="image" href="/images/goodmorning.jpg">
+  <link rel="preload" as="image" href="/images/shibuyacrossing.jpg">
+  <link rel="preload" as="image" href="/images/nana.jpg">
+  <link rel="stylesheet" href="/index.css" type="text/css">
   <title>Sean Coleman</title>
 </head>
 
@@ -19,20 +19,20 @@
     <ul>
       <li><a href="#projects">PROJECTS</a></li>
       <li><a href="#contacts">MUSIC</a></li>
-      <li><a href="posts/index.html">POSTS</a></li>
+      <li><a href="/posts/">POSTS</a></li>
     </ul>
   </nav>
 </header>
 
 <body>
   <div class="middle-section">
-    <img src="images/crosswalk.jpg" title="I'm not even sure which crosswalk this is. Probably not the Shibuya one."
+    <img src="/images/crosswalk.jpg" title="I'm not even sure which crosswalk this is. Probably not the Shibuya one."
       alt="Crosswalk" id="crosswalk" width="600px">
-    <img src="images/flowers.jpg" title="These are flowers photographed by a man shitting his pants. Context is TMI"
+    <img src="/images/flowers.jpg" title="These are flowers photographed by a man shitting his pants. Context is TMI"
       alt="Flowers" id="flowers" width="200px">
-    <img src="images/nana.jpg" alt="Nana" title="The coolest person alive, probably. Can Masaki fight?" id="nana"
+    <img src="/images/nana.jpg" alt="Nana" title="The coolest person alive, probably. Can Masaki fight?" id="nana"
       width="150px">
-    <img src="images/driedflower.jpg" alt="Dried Flower" id="driedflower" width="100px">
+    <img src="/images/driedflower.jpg" alt="Dried Flower" id="driedflower" width="100px">
     <div class="azabudai-section">
       <p>
         そして私はいつか
@@ -56,7 +56,7 @@
 
   <div class="row-section">
     <div class="image" id="shibuya">
-      <img src="images/nyc.jpg" alt="flyhigher" width="200px">
+      <img src="/images/nyc.jpg" alt="flyhigher" width="200px">
       <p class="image-tag">SEAN COLEMAN JANUARY 2026</p>
     </div>
     <p>
@@ -86,7 +86,7 @@
       </i>
     </p>
     <div class="image" id="shibuya">
-      <img src="images/goodmorning.jpg" alt="April 2024" width="200px"
+      <img src="/images/goodmorning.jpg" alt="April 2024" width="200px"
         title="The T2/FLAIR mismatch sign describes an MRI appearance whereby a solid tumor with a very high T2 signal demonstrates prominent albeit incomplete attenuation of this signal on FLAIR.
 
 In adults, it is considered a highly specific radiogenomic signature for astrocytomas IDH-mutant, as opposed to other diffuse gliomas such as oligodendroglioma 4,5. Indeed, a 2021 meta-analysis showed a pooled specificity of 100% for identifying tumors with IDH-mutant, 1p19q non-codeleted status, though pooled sensitivity was 42% ">
@@ -96,7 +96,7 @@ In adults, it is considered a highly specific radiogenomic signature for astrocy
 
   <div class="row-section">
     <div class="image" id="shibuya">
-      <img src="images/shibuyacrossing.jpg" alt="Shibuya Crossing" width="200px">
+      <img src="/images/shibuyacrossing.jpg" alt="Shibuya Crossing" width="200px">
       <p class="image-tag">LISA MICHELLE BURNS (?)</p>
     </div>
     <p class="screenplay">
