--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preload" as="image" href="/images/goodmorning.jpg">
   <link rel="preload" as="image" href="/images/shibuyacrossing.jpg">
   <link rel="preload" as="image" href="/images/nana.jpg">
+  <link rel="icon" type="image/webp" href="/images/nara.webp">
   <link rel="stylesheet" href="/index.css" type="text/css">
   <title>Sean Coleman</title>
 </head>
